# av_llm

./: .clang-format  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.win  av_llm.cpp  av_llm_1.cpp  build_cpu.bat  build_sycl.bat  build_sycl_copy_dependencies.bat  build_sycl_prepare.bat  build_vulkan.bat  build_windows.bat  build_windows.ps1  external.cmake  log.hpp  main.cpp  make.bat  model.hpp  readme.md  research.md  utils.hpp
.github/workflows/: build.yml
agent/: CMakeLists.txt  pyproject.toml  readme.md  setup.py
agent/gpt_agent/: Dockerfile  api_server.py  events.py  requirements.txt  server.py  stuff.md
agent/gpt_agent/gpt_oss/tools/python_docker/: docker_tool.py
agent/gpt_agent/inference/: llama_cpp.py
agent/llama_cpp/: CMakeLists.txt  avllm.cpp  log.hpp
agent/src/: avllm_bindings.cpp
agent/src/avllm/: __init__.py
av_llm_docs/: docusaurus.config.ts  sidebars.ts
av_llm_docs/docs/: capability.mdx  cli.mdx  server.mdx
av_llm_docs/src/pages/: _index.tsx  index.md
cmake/patches/: mbedtls_CMakeLists.txt
docs/: 404.html  av_llm_api.json  build.md  index.html  model.md  model_gpt_oss.md  sitemap.xml
docs/00_docs_av_llm/: package.json  sidebars.ts
docs/00_docs_av_llm/docs/: cli.mdx  integration.mdx  server.mdx
docs/00_docs_av_llm/src/pages/: index.md
docs/00_docs_av_llm/static/: av_llm_api.json
docs/api-reference/: index.html
docs/assets/css/: styles.66cfd9e3.css
docs/assets/js/: 0058b4c6.f6a87708.js  17896441.2de7f6f1.js  1f391b9e.3b78fa9a.js  2a4814fb.540b8053.js  341.bcf4fd0e.js  42.6a25353a.js  523c1c6c.d5e68562.js  5bcb647e.755c6779.js  5bcb647e.bc29be34.js  5e95c892.1933e1b3.js  858ebe90.01170254.js  858ebe90.b528851f.js  a7456010.337b3232.js  a7bd4aaa.066e1593.js  a94703ab.8eb1ca29.js  aba21aa0.eb9c1467.js  ba61d949.3c17efed.js  ba61d949.3c9d2a60.js  ba61d949.683a3289.js  cf586e30.47368433.js  dcaedc57.b899e526.js  dcaedc57.cb5440c1.js  f3976560.aed800a3.js  f3976560.b63987e7.js  f3976560.df0ba226.js  ffb87183.c7802694.js  main.2262a985.js  main.cb64b3f7.js  main.df82a1b0.js  runtime~main.6170056f.js  runtime~main.66c59b82.js  runtime~main.74e3d5a3.js
docs/docs/docs/capability/: index.html
docs/docs/docs/cli/: index.html
docs/docs/docs/integration/: index.html
docs/docs/docs/server/: index.html
example/: CMakeLists.txt  avllm_chat.cpp  avllm_chat_ng.cpp  avllm_cli.cpp  avllm_embedding.cpp  avllm_gen.cpp  avllm_sentence_similarity.cpp  avllm_server.cpp  avllm_simple.cpp  common.hpp  gpt_agent_chat.py
example/gpt-agent/: gpt_agent.py  gpt_agent_python.py  readme.md  requirements.txt
example/gpt-agent/gpt_oss/: pyproject.toml
example/gpt-agent/gpt_oss/tools/python_docker/: docker_tool.py
example/semantic_search/: CMakeLists.txt  semantic_search.cpp
scripts/: control  installer.nsi
simplechat/: datautils.mjs  index.html  simplechat.css  simplechat.js  ui.mjs
src/: av_llm.cpp  log.hpp  model.hpp  openai.hpp  utils.hpp
sw_sp_prompt/: 10_ci_cd.md
sw_sp_prompt/01_cli/: CMakeLists.txt  av_llm_ai_draft.cpp  av_llm_prompt.md  p_cli.md  p_cli_1.cpp  p_cli_2.cpp  p_cli_3.cpp
sw_sp_prompt/10_cicd/: 10_ci.md
test/: CMakeLists.txt  avllm_embedding.cpp  external.cmake  llama_print_option_tbl.cpp  test_chat_template.cpp  test_cli.cpp  test_curl.cpp  test_llamacpp.cpp  test_model.cpp  test_std.cpp
test/cpack_demo/: CMakeLists.txt
test/cpack_demo/src/: main.cpp
test/test_make_installer/: CMakeLists.txt  Distribution.xml  Makefile
webui/: index.html  package.json
webui/src/: App.tsx
webui/src/components/: Header.tsx
