[build-system]
requires = [
  "scikit-build-core>=0.11.6",
  "cmake",
  "ninja",
  "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "avllm"
version = "0.1.0"
description = "Your package description"
authors = [
  { name="Harry", email="harry@example.com" }
]
dependencies = []

[tool.scikit-build.cmake]
args = ["-G", "Ninja", "-DCMAKE_BUILD_TYPE=Release"]
